myStyle.css
.shell {
  max-width: 960px;
  margin: 0 auto;
}

#banner {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  height: 300px;
  border: solid 1px;
  background-size: cover;
  -webkit-transition: all 0.8s linear;
  -o-transition: all 0.8s linear;
  transition: all 0.8s linear;
}

/* Classes that holds banner images start */
.banner-1 {
  background: url('./images/img_nature_wide.jpg') no-repeat;
}

.banner-2 {
  background: url('./images/img_fjords_wide.jpg') no-repeat;
}

.banner-3 {
  background: url('./images/img_mountains_wide.jpg') no-repeat;
}

.banner-4 {
  background: url('./images/img_lights_wide.jpg') no-repeat;
}

.service-holder {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  padding: 0;
  list-style: none;
}

.service {
  width: 25%;
  position: relative;
  text-align: center;
  color: white;
  font-size: 0;
  /* Solves unwanted margin */
}

.service img {
  width: 100%;
}

/* The Text inside the service*/
.service a {
  font-size: 18px;
  position: absolute;
  display: table;
  width: 100%;
  height: 100%;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-decoration: none;
  color: #ffffff;
  font-weight: bold;
  font-size: 24px;
  color: white;
  text-shadow:
    -1px -1px 0 #000,
     1px -1px 0 #000,
     -1px 1px 0 #000,
      1px 1px 0 #000;
}

/* Holds the text inside over the small images */
.service a span {
  display: table-cell;
  vertical-align: middle;
}

.service:hover{
  -webkit-filter: brightness(130%);
  filter: brightness(130%);
}

.active.service a {
  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+39,000000+100&0+0,0.41+40,0.65+100 */
background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%, rgba(0,0,0,0.4) 39%, rgba(0,0,0,0.41) 40%, rgba(0,0,0,0.65) 100%); /* FF3.6-15 */
background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.4) 39%,rgba(0,0,0,0.41) 40%,rgba(0,0,0,0.65) 100%); /* Chrome10-25,Safari5.1-6 */
background: radial-gradient(ellipse at center, rgba(0,0,0,0) 0%,rgba(0,0,0,0.4) 39%,rgba(0,0,0,0.41) 40%,rgba(0,0,0,0.65) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

/* Split Services in 2 coloumns and remove banner*/
@media screen and (max-width: 650px) {
  #banner {
    display: none;
  }
  .service {
    width: 50%;
  }
}

